--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_auth: ^4.4.2
   equatable: ^2.0.5
   flutter_bloc: ^8.1.2
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
@@ -41,4 +42,4 @@ flutter:
   assets:
     - assets/logo.png
     - assets/logo_dark.png
-
+    - assets/logo_clean.png
