--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.2
   google_fonts: ^4.0.4
+  cloud_firestore: ^4.7.0
 
 dev_dependencies:
   flutter_test:
