--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   google_fonts: ^4.0.4
   cloud_firestore: ^4.7.0
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
