--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  audioplayers: ^4.0.1
   cupertino_icons: ^1.0.2
   very_good_analysis: ^4.0.0+1
   firebase_core: ^2.12.0
