--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_fonts: ^4.0.4
   cloud_firestore: ^4.7.0
   google_sign_in: ^6.1.0
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
