--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   google_sign_in: ^6.1.0
   google_maps_flutter: ^2.2.6
   geolocator: ^9.0.2
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
